# USAII

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/routers/: decision.py
backend/schemas/: models.py
backend/services/: ai_service.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: action-plan.tsx  assumptions-list.tsx  belief-graph.tsx  chat-input.tsx  contradictions.tsx  decision-contract.tsx  extraction-display.tsx  reflection-questions.tsx  scenarios.tsx  tradeoff-chart.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts  pdf-export.ts  types.ts
