[project]
name = "backend"
version = "0.1.0"
description = "AI Decision Intelligence System"
authors = [{ name = "USAII" }]
requires-python = "^3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "python-dotenv>=1.0.0",
  "google-genai>=2.8.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "tenacity>=9.1.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
